src/test/deca/syntax/valid/ifthenelse.deca
{if (true) {
	println("if");
 }
 else if (false) {
 	println("elsif");
 }
 else {
 	println("else");
 };
}
  